@@ -217,6 +217,7 @@ class MysqlUpdater extends DatabaseUpdater {
 
 			// 1.21
 			array( 'dropField', 'site_stats',   'ss_admins',        'patch-drop-ss_admins.sql' ),
+			array( 'dropField', 'recentchanges', 'rc_moved_to_title',            'patch-rc_moved.sql' ),
 		);
 	}
 
